Add venue page, change footer to black, add social links to footer

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
     url: /coming_soon
   
   - title: "Venue"
-    url: /coming_soon
+    url: /venue
 
   - title: "Registration"
     url: /coming_soon
