--- a/_config.yml
+++ b/_config.yml
@@ -111,6 +111,12 @@ footer:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: https://twitter.com/altanlp
+    - label: "Mastodon"
+      icon: "fab fa-fw fa-mastodon"
+      url: https://sigmoid.social/@ALTanlp
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: https://www.linkedin.com/company/australasian-language-technology-association
     # - label: "Facebook"
     #   icon: "fab fa-fw fa-facebook-square"
     #   url: https://www.facebook.com/emnlp2022
