Add local committee page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,8 +24,8 @@ main:
   - title: "Shared Task"
     url: /coming_soon
 
-  - title: "Committees"
-    url: /coming_soon
+  - title: "Committee"
+    url: /committee_local
   
   - title: "Mentoring"
     url: /coming_soon
