Added Call for Shared Task, added Sponsors page, added Contact Page, added Shared Task page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,10 +19,10 @@ main:
     url: /coming_soon
   
   - title: "Sponsors"
-    url: /coming_soon
+    url: /sponsors
     
   - title: "Shared Task"
-    url: /coming_soon
+    url: /shared-task
 
   - title: "Committee"
     url: /committee_local
@@ -31,7 +31,7 @@ main:
     url: /coming_soon
 
   - title: "Calls"
-    url: /coming_soon
+    url: /calls
 
   - title: "Contact"
-    url: /coming_soon
+    url: /contact
