Update program menu link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /keynotes
 
   - title: "Programme"
-    url: /coming_soon
+    url: /program
   
   - title: "Venue"
     url: /venue
