Add ALTA mentoring link

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,7 +31,7 @@ main:
     url: /calls/papers
   
   - title: "Mentoring"
-    url: /coming_soon
+    url: https://www.alta.asn.au/mentoring/index.html
 
   - title: "Contact"
     url: /contact
