--- a/_config.yml
+++ b/_config.yml
@@ -125,6 +125,9 @@ footer:
       url: https://github.com/cdawei/alta2024
     - label: "ALTA"
       icon: "fas fa-fw fa-link"
+      url: https://join.slack.com/t/alta-nlp/shared_invite/zt-2unu7ju1c-V52yq~q~etCpPIFjAMNPbQ
+    - label: "Join the ALTA Slack"
+      icon: "fas fa-fw fa-slack"
       url: https://www.alta.asn.au/
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
