--- a/_config.yml
+++ b/_config.yml
@@ -17,22 +17,22 @@ livereload: true
 
 # Site Settings
 locale                   : "en-US"
-title                    : "ALTA 2024"
+title                    : "ALTA 2025"
 title_separator          : "-"
 name                     : "ALTA"
-description              : "Official website for the 2024 Workshop of the Australasian Language Technology Association"
-url                      : "https://alta2024.netlify.app/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : "Official website for the 2025 Workshop of the Australasian Language Technology Association"
+url                      : "https://alta2025.netlify.app/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : #"naacl-org/naacl-2021-website" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : "/assets/images/logos/alta_2024.png" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+logo                     : "/assets/images/logos/alta_2025.jpg" # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : " " # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 200
 comments:
   provider               : "disqus"
   disqus:
-    shortname            : "alta2024"
+    shortname            : "alta2025"
 reCaptcha:
   siteKey                :
   secret                 :
@@ -122,7 +122,7 @@ footer:
     #   url: https://www.facebook.com/emnlp2022
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: https://github.com/cdawei/alta2024
+      url: https://github.com/jkkummerfeld/alta2025
     - label: "Join the ALTA Slack"
       icon: "fab fa-fw fa-brands fa-slack"
       url: https://join.slack.com/t/alta-nlp/shared_invite/zt-2unu7ju1c-V52yq~q~etCpPIFjAMNPbQ
